# stocksmith

./: LICENSE  pyproject.toml
stocksmith/: hello_world.py
tests/: test_stocksmith.py
